# SampleMag

./: CMakeLists.txt  README.md  main  main.cpp
.cache/clangd/index/: main.cpp.01BE48F80B22401C.idx
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
